--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="position-absolute top-0 start-50 translate-middle-x mt-5 p-3 mb-2 bg-dark text-white 
     card w-50 text-center "  id="main">
 
-<h1 id="h1"> Bep X.O </h1>
+<h1 id="h1">  X.O game </h1>
 
 
 <div class="container px-4 text-center ">
