--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
 
 
-  <div class="position-absolute top-0 start-50 translate-middle-x mt-5 p-3 mb-2 bg-dark text-white 
-    card w-50 text-center "  id="main">
+  <div class="  top-0 start-50 translate-middle-x mt-5 p-3 mb-2 bg-dark text-white 
+    card col-12 col-md-5 text-center "  id="main">
 
 <h1 id="h1">  X.O game </h1>
 
